--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ remote_theme: pages-themes/merlot@v0.2.0
 plugins:
 - jekyll-remote-theme
 title: CSE455 Final Project
-description: CSE455 Final Project - Anirudh Suresh, Neel Jog, Ayush Nag
+description: Anirudh Suresh, Neel Jog, Ayush Nag
